--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,4 @@
-@import "../../node_modules/element-plus/dist/index.css";
+$--font-path: "~element-plus/lib/theme-chalk/fonts";
+
+@import "./element/index.scss";
 @import "./tailwind/index.css";
