make user info dynamic

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,3 +2,49 @@ $--font-path: "~element-plus/lib/theme-chalk/fonts";
 
 @import "./element/index.scss";
 @import "./tailwind/index.css";
+
+.el-table {
+  --el-table-header-font-color: white;
+  --el-table-header-background-color: var(--el-color-primary);
+
+  .ascending {
+    .sort-caret {
+      &.ascending {
+        border-bottom-color: white !important;
+      }
+    }
+  }
+  .descending {
+    .sort-caret {
+      &.descending {
+        border-top-color: white !important;
+      }
+    }
+  }
+
+  .el-input {
+    &.inline__edit {
+      --el-input-background-color: transparent;
+    }
+  }
+}
+
+.el-menu {
+  --el-menu-active-color: rgba(250, 250, 250, 1);
+  --el-menu-text-color: rgba(250, 250, 250, 0.7);
+  --el-menu-background-color: var(--el-color-primary);
+  --el-menu-hover-background-color: #0000a3;
+  --el-menu-border-color: none;
+
+  &:hover {
+    color: white;
+  }
+
+  .el-menu--inline {
+    --el-menu-background-color: #000085;
+  }
+}
+
+.el-avatar {
+  border: 1px white solid;
+}
